--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	"name": "nathancox/customtreeicons",
 	"description": "An experiment in allowing site tree icons to be set per-page instead of just per page type.",
 	"type": "silverstripe-module",
+	"license": "BSD-3-Clause",
 	"keywords": ["silverstripe", "sitetree"],
 	"authors": [
 		{
